[tool.poetry]
name = "talk2learn"
version = "0.0.1"
description = "Learn by talking!"
authors = ["Youval Vanlaer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
transformers = "^4.45.2"
accelerate = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
